style.css
.body {
  font-family: inter;
}
@import url(./inter.css);

.form {
  display: flex;
  flex-direction: column;
  margin: 10px auto;
  max-width: 200px;
  border: 1px solid red;
}

.button {
  width: 100px;
  margin: 10px auto 5px;
  padding: 0;
  text-align:-moz-center;
  text-align:-webkit-center;
}

.input {
  width: 150px;
  margin: 10px auto 0;
  text-align: center;
  border: none;
  border-bottom: 1px solid black;
  padding-bottom: 3px;
}

.input::-webkit-outer-spin-button,
.input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.input[type="number"] {
  -moz-appearance: textfield;
}

.input:focus {
  outline: none;
}

.block {
  width: 100px;
  display: flex;
  flex-direction: column;
  margin: 10px auto;
  align-items: center;
  row-gap: 10px;
}

.block__title {
  margin: 0;
}

.block__paragraf {
  margin: 0;
  border-bottom: 1px solid black;
  padding-bottom: 3px;
  text-align: center;
}

.block__paragraf_type-place {
  width: 85px;
  border: none;
  white-space: break-spaces;
}

.header__time {
  width: 100px;
  margin: 15px auto;
  text-align: center;
}

